--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,46 +1,39 @@
 name: test
 
-on: [push, pull_request]
+on:
+  workflow_dispatch:
+
+env:
+  TEST_REPOSITORY: tmtenbrink/rustfrc
 
 jobs:
   test:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - python-version: 3.6
-            pep-425-tag: 'cp36-cp36m'
-          - python-version: 3.7
-            pep-425-tag: 'cp37-cp37m'
-          - python-version: 3.8
-            pep-425-tag: 'cp38-cp38'
-          - python-version: 3.9
-            pep-425-tag: 'cp39-cp39'
+          include:
+            - py-version: 3.9
+              py-pep-425: 'cp39-cp39'
     runs-on: ubuntu-latest
     steps:
     - name: Checkout action
       uses: actions/checkout@v2
-      with:
-        path: test_action
-    - name: Checkout hello_py dummy project
+    - name: Checkout rustfrc
       uses: actions/checkout@v2
       with:
-        repository: ralfg/hello_py
-        ref: v0.1.0
-        path: hello_py
+        repository: ${{ env.TEST_REPOSITORY }}
+        path: ${{ env.TEST_REPOSITORY }}
     - name: Setup Python environment
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: ${{ matrix.py-version }}
     - name: Build manylinux Python wheels
-      uses: './test_action'
+      uses: './'
       with:
-        python-versions: ${{ matrix.pep-425-tag }}
-        build-requirements: 'setuptools numpy cython'
-        system-packages: 'lrzip-devel zlib-devel'
-        pre-build-command: 'echo Hello world! Testing pre-build command'
-        package-path: 'hello_py'
-    - name: Install wheel
-      run: 'pip install hello_py/dist/hello_py*-manylinux2010_x86_64.whl'
-    - name: Test wheel
-      run: 'hello_py'
+        py-version: "python${{ matrix.py-version }}"
+        py-pep-425: ${{ matrix.py-pep-425 }}
+        package-path: ${{ env.TEST_REPOSITORY }}
+    - uses: actions/upload-artifact@v2
+      with:
+        name: wheels-manylinux
+        path: ${{ env.TEST_REPOSITORY }}/dist
