--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
           include:
-            - py-version: 3.10
+            - py-version: '3.10'
               py-pep-425: 'cp310-cp310'
     runs-on: ubuntu-latest
     steps:
